--- a/lang/ar.json
+++ b/lang/ar.json
@@ -94,7 +94,7 @@
     "image"                  : "الصورة",
     "image_required"         : "الصورة مطلوبة",
     "category_name"          : "اسم القسم",
-    "create_employee"        : "اضافة موظف",
+    "create_employee"        : "إضافة موظف جديد",
     "update_employee"        : "تعديل موظف",
     "delete_employee"        : "حذف موظف",
     "type_required"          : "النوع مطلوب",
@@ -174,19 +174,19 @@
     "address_min"            : "العنوان لا يقل عن 3 أحرف",
     "secondary_address_min"  : "العنوان الثاني لا يقل عن 3 أحرف",
     "not_authorized"         : "ليس لديك الصلاحية للقيام بهذا الإجراء",
-    "create_category"        : "إنشاء قسم",
+    "create_category"        : "إضافة قسم جديد",
     "update_category"        : "تعديل قسم",
     "delete_category"        : "حذف قسم",
-    "create_station"         : "إنشاء محطة",
+    "create_station"         : "إضافة محطة جديدة",
     "update_station"         : "تعديل محطة",
     "delete_station"         : "حذف محطة",
-    "create_country"         : "إنشاء بلد",
-    "update_country"         : "تعديل بلد",
-    "delete_country"         : "حذف بلد",
-    "create_city"            : "إنشاء مدينة",
+    "create_country"         : "إضافة دولة جديدة",
+    "update_country"         : "تعديل دولة",
+    "delete_country"         : "حذف دولة",
+    "create_city"            : "إضافة مدينة جديدة",
     "update_city"            : "تعديل مدينة",
     "delete_city"            : "حذف مدينة",
-    "create_item"            : "إنشاء مفقود",
+    "create_item"            : "إضافة مفقود جديد",
     "update_item"            : "تعديل مفقود",
     "delete_item"            : "حذف مفقود",
     "permissions"            : "الصلاحيات",
