--- a/lang/en.json
+++ b/lang/en.json
@@ -92,7 +92,7 @@
     "new_category"           : "Add New Category",
     "edit_category"          : "Edit Category",
     "category_name"          : "Category Name",
-    "create_employee"        : "Create Employee",
+    "create_employee"        : "Create New Employee",
     "update_employee"        : "Update Employee",
     "delete_employee"        : "Delete Employee",
     "type_required"          : "Type is required",
@@ -172,19 +172,19 @@
     "address_min"            : "Address minimum is 3 letters",
     "secondary_address_min"  : "Secondary address minimum is 3 letters",
     "not_authorized"         : "You do not have the authority to perform this action",
-    "create_category"        : "Create Category",
+    "create_category"        : "Create New Category",
     "update_category"        : "Update Category",
     "delete_category"        : "Delete Category",
-    "create_station"         : "Create Station",
+    "create_station"         : "Create New Station",
     "update_station"         : "Update Station",
     "delete_station"         : "Delete Station",
-    "create_country"         : "Create Country",
+    "create_country"         : "Create New Country",
     "update_country"         : "Update Country",
     "delete_country"         : "Delete Country",
-    "create_city"            : "Create City",
+    "create_city"            : "Create New City",
     "update_city"            : "Update City",
     "delete_city"            : "Delete City",
-    "create_item"            : "Create Item",
+    "create_item"            : "Create New Item",
     "update_item"            : "Update Item",
     "delete_item"            : "Delete Item",
     "permissions"            : "Permissions",
