👌 IMPROVE: home dashboard

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -201,5 +201,6 @@
     "reports"                : "التقارير",
     "latest_items"           : "أحدث المفقودات",
     "items_statistics"       : "إحصائيات المفقودات",
+    "main_categories"        : "الأقسام الرئيسية للمفقودات",
     ""                       : ""
 }
