--- a/lang/en.json
+++ b/lang/en.json
@@ -199,5 +199,6 @@
     "reports"                : "Reports",
     "latest_items"           : "Latest Items",
     "items_statistics"       : "Items Statistics",
+    "main_categories"        : "Main sections of lost and found items",
     ""                       : ""
 }
