--- a/lang/en.json
+++ b/lang/en.json
@@ -200,5 +200,6 @@
     "latest_items"           : "Latest Items",
     "items_statistics"       : "Items Statistics",
     "main_categories"        : "Main sections of lost and found items",
+    "item_description"       : "Item Description",
     ""                       : ""
 }
