👌 IMPROVE: dashboard employees logs

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -203,5 +203,6 @@
     "items_statistics"       : "إحصائيات المفقودات",
     "main_categories"        : "الأقسام الرئيسية للمفقودات",
     "item_description"       : "وصف المفقود",
+    "employee_name"          : "اسم الموظف",
     ""                       : ""
 }
