--- a/lang/ar.json
+++ b/lang/ar.json
@@ -59,6 +59,7 @@
     "name_en_min"                  : "الاسم باللغة الإنجليزية بحد أدنى 3 أحرف",
     "not_found"                    : "هذا العنصر غير موجود",
     "updated_successfully"         : "تم التعديل بنجاح",
+    "item_created"                 : "تم اضافة العنصر بنجاح",
     "delete"                       : "حذف",
     "no"                           : "لا",
     "yes"                          : "نعم",
