--- a/lang/en.json
+++ b/lang/en.json
@@ -213,5 +213,6 @@
     "please_enter_details"         : "Please enter details",
     "show_item"                    : "Show Item",
     "export_pdf"                   : "Export PDF",
+    "export_excel"                 : "Export Excel",
     ""                             : ""
 }
