👌 IMPROVE: item images

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -238,5 +238,6 @@
     "storage_name"                 : "اسم المخزن",
     "edit_storage"                 : "تعديل مخزن",
     "select_storage"               : "إختر المخزن",
+    "images"                       : "الصور",
     ""                             : ""
 }
