--- a/lang/en.json
+++ b/lang/en.json
@@ -234,5 +234,6 @@
     "storage_name"                 : "Storage Name",
     "edit_storage"                 : "Edit Storage",
     "select_storage"               : "Select Storage",
+    "images"                       : "Images",
     ""                             : ""
 }
