👌 IMPROVE: mafkodat dashboard

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -167,6 +167,7 @@
     "item_not_found"               : "المفقود غير موجود",
     "must_be_email"                : "يجب أن يكون البريد الإلكتروني صحيح",
     "first_name_min"               : "الاسم الأول لا يقل عن 3 أحرف",
+    "name_min"                     : "الاسم لا يقل عن 3 أحرف",
     "family_name_min"              : "الاسم الأخير لا يقل عن 3 أحرف",
     "phone_min"                    : "رقم الهاتف لا يقل عن 8 أرقام",
     "phone_max"                    : "رقم الهاتف لا يزيد عن 12 أرقام",
