--- a/lang/en.json
+++ b/lang/en.json
@@ -165,6 +165,7 @@
     "item_not_found"               : "Item not found",
     "must_be_email"                : "Must be an email",
     "first_name_min"               : "First name minimum is 3 letters",
+    "name_min"                     : "Name minimum is 3 letters",
     "family_name_min"              : "Family name minimum is 3 letters",
     "phone_min"                    : "Phone number minimum is 8 numbers",
     "phone_max"                    : "Phone number maximum is 12 numbers",
