--- a/lang/ar.json
+++ b/lang/ar.json
@@ -249,5 +249,7 @@
     "informer_name_required"       : "اسم المبلغ مطلوب",
     "informer_phone_required"      : "رقم الجوال مطلوب",
     "storage_not_found"            : "لم يتم العثور على المخزن",
+    "image_deleted_successfully"   : "تم حذف الصورة بنجاح",
+    "image_not_found"              : "لم يتم العثور على الصورة",
     ""                             : ""
 }
