--- a/lang/ar.json
+++ b/lang/ar.json
@@ -251,5 +251,6 @@
     "storage_not_found"            : "لم يتم العثور على المخزن",
     "image_deleted_successfully"   : "تم حذف الصورة بنجاح",
     "image_not_found"              : "لم يتم العثور على الصورة",
+    "postcode"                     : "الرمز البريدي",
     ""                             : ""
 }
