--- a/lang/en.json
+++ b/lang/en.json
@@ -247,5 +247,6 @@
     "storage_not_found"            : "Storage not found",
     "image_deleted_successfully"   : "Image deleted successfully",
     "image_not_found"              : "Image not found",
+    "postcode"                     : "Post Code",
     ""                             : ""
 }
