--- a/lang/en.json
+++ b/lang/en.json
@@ -248,5 +248,6 @@
     "image_deleted_successfully"   : "Image deleted successfully",
     "image_not_found"              : "Image not found",
     "postcode"                     : "Post Code",
+    "date&time"                    : "Date & Time",
     ""                             : ""
 }
