👌 IMPROVE: item delivered data

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -253,5 +253,6 @@
     "image_not_found"              : "لم يتم العثور على الصورة",
     "postcode"                     : "الرمز البريدي",
     "date&time"                    : "التاريخ والوقت",
+    "deliverd_date"                : "تاريخ التسليم",
     ""                             : ""
 }
