--- a/lang/en.json
+++ b/lang/en.json
@@ -249,5 +249,6 @@
     "image_not_found"              : "Image not found",
     "postcode"                     : "Post Code",
     "date&time"                    : "Date & Time",
+    "deliverd_date"                : "Delivered Date",
     ""                             : ""
 }
