👌 IMPROVE: dashboard home item table

--- a/lang/en.json
+++ b/lang/en.json
@@ -250,5 +250,6 @@
     "postcode"                     : "Post Code",
     "date&time"                    : "Date & Time",
     "deliverd_date"                : "Delivered Date",
+    "no_data"                      : "No data available in table",
     ""                             : ""
 }
