--- a/lang/ar.json
+++ b/lang/ar.json
@@ -254,5 +254,6 @@
     "postcode"                     : "الرمز البريدي",
     "date&time"                    : "التاريخ والوقت",
     "deliverd_date"                : "تاريخ التسليم",
+    "no_data"                      : "ليست هناك بيانات متاحة في الجدول",
     ""                             : ""
 }
