--- a/lang/en.json
+++ b/lang/en.json
@@ -142,6 +142,7 @@
     "date"                         : "Date",
     "time"                         : "Time",
     "is_delivered"                 : "Is delivered",
+    "not_delivered"                : "Not delivered",
     "statistics"                   : "Statistics",
     "total_items"                  : "Total Items",
     "total_delivered_items"        : "Total Delivered Items",
