--- a/lang/ar.json
+++ b/lang/ar.json
@@ -255,5 +255,7 @@
     "date&time"                    : "التاريخ والوقت",
     "deliverd_date"                : "تاريخ التسليم",
     "no_data"                      : "ليست هناك بيانات متاحة في الجدول",
+    "date_from"                    : "من",
+    "date_to"                      : "إلى",
     ""                             : ""
 }
