--- a/lang/ar.json
+++ b/lang/ar.json
@@ -258,5 +258,6 @@
     "no_data"                      : "ليست هناك بيانات متاحة في الجدول",
     "date_from"                    : "من",
     "date_to"                      : "إلى",
+    "welcome"                      : "مرحباً",
     ""                             : ""
 }
