--- a/lang/en.json
+++ b/lang/en.json
@@ -255,5 +255,6 @@
     "date_from"                    : "Date From",
     "date_to"                      : "Date To",
     "welcome"                      : "Welcome",
+    "import_success"               : "Import Success",
     ""                             : ""
 }
