--- a/lang/ar.json
+++ b/lang/ar.json
@@ -36,7 +36,7 @@
     "congrats"                     : "تهانينا",
     "employees"                    : "الموظفين",
     "new_employee"                 : "اضافة موظف جديد",
-    "id"                           : "مسلسل",
+    "id"                           : "الرقم التسلسلي",
     "full_name"                    : "الاسم بالكامل",
     "mobile"                       : "رقم الجوال",
     "phone"                        : "رقم الهاتف",
@@ -94,7 +94,7 @@
     "edit_category"                : "تعديل قسم",
     "image"                        : "الصورة",
     "image_required"               : "الصورة مطلوبة",
-    "category_name"                : "اسم القسم",
+    "category_name"                : "نوع المفقود",
     "create_employee"              : "إضافة موظف جديد",
     "update_employee"              : "تعديل موظف",
     "delete_employee"              : "حذف موظف",
@@ -141,8 +141,8 @@
     "select_category"              : "اختر قسم",
     "second_address"               : "العنوان الثاني",
     "post_code"                    : "الرمز البريدي",
-    "date"                         : "تاريخ",
-    "time"                         : "وقت",
+    "date"                         : "تاريخ الفقد",
+    "time"                         : "وقت الفقد",
     "is_delivered"                 : "تم الاستلام",
     "not_delivered"                : "لم يتم الاستلام",
     "statistics"                   : "الاحصائيات",
@@ -260,6 +260,7 @@
     "date_to"                      : "إلى",
     "welcome"                      : "مرحباً",
     "import_success"               : "تمت الإضافة بنجاح",
-    "full_name_and_phone_required" : "الاسم ورقم الجوال مطلوب",
+    "full_name_and_phone_required" : "الاسم ورقم الهاتف مطلوب",
+    "date_after_today_error"       : "يجب أن يكون تاريخ البلاغ قبل تاريخ اليوم",
     ""                             : ""
 }
