--- a/lang/ar.json
+++ b/lang/ar.json
@@ -39,7 +39,7 @@
     "id"                           : "الرقم التسلسلي",
     "full_name"                    : "الاسم بالكامل",
     "mobile"                       : "رقم الجوال",
-    "phone"                        : "رقم الهاتف",
+    "phone"                        : "رقم الجوال",
     "email"                        : "البريد الالكترونى",
     "country"                      : "البلد",
     "city"                         : "المدينة",
@@ -144,7 +144,6 @@
     "date"                         : "تاريخ الفقد",
     "time"                         : "وقت الفقد",
     "is_delivered"                 : "تم الاستلام",
-    "not_delivered"                : "لم يتم الاستلام",
     "statistics"                   : "الاحصائيات",
     "total_items"                  : "إجمالي المفقودات",
     "total_delivered_items"        : "إجمالي المفقودات المستلمة",
@@ -262,5 +261,15 @@
     "import_success"               : "تمت الإضافة بنجاح",
     "full_name_and_phone_required" : "الاسم ورقم الهاتف مطلوب",
     "date_after_today_error"       : "يجب أن يكون تاريخ البلاغ قبل تاريخ اليوم",
+    "employees_list"               : "قائمة الموظفين",
+    "cities_list"                  : "قائمة المدن",
+    "categories_list"              : "أقسام المفقودات",
+    "items_list"                   : "سجل المفقودات",
+    "storages_list"                : "قائمة المخازن",
+    "stations_list"                : "قائمة المحطات",
+    "event"                        : "الحدث",
+    "item_status"                  : "حالة المفقود",
+    "delivered"                    : "تم التسليم",
+    "not_delivered"                : "لم يتم التسليم",
     ""                             : ""
 }
